# Minitaller-Jenkins

./: .dockerignore  .flake8  .gitignore  Dockerfile  Jenkinsfile  README.md  buscaminas.py  compose.yaml  instructions.md  jenkins-local.Dockerfile  pyproject.toml
src/buscaminas_app/: __init__.py  domain.py  gui.py  paths.py  ranking.py
tests/: test_domain.py  test_ranking.py
