[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "buscaminas-minitaller"
version = "0.1.0"
description = "Buscaminas con Tkinter modularizado para CI/CD con Jenkins"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0",
]

[tool.setuptools.packages.find]
where = ["src"]
